# relevance-medic

./: MANIFEST.txt  README.md  pyproject.toml  requirements.txt  run_cli.sh  streamlit_app.py
data/examples/: incident_001.json  incident_003.json  incident_006.json
data/synthetic/: expected_labels.jsonl  incidents.jsonl  regression_queries.jsonl
demo/sample_reports/: incident_001_report.json
docs/: abstention-policy.md  critique-and-fixes.md  demo-script.md  failure-taxonomy.md  portfolio-presentation-notes.md  problem-framing.md  scoring-rubric.md
eval/rubrics/: abstention.md  classification.md
schemas/: diagnosis_output.schema.json  incident_input.schema.json
src/relevance_medic/: __init__.py  cli.py  eval_runner.py  logic.py  pipeline.py  taxonomy.py  utils.py  validator.py
tests/: test_pipeline.py
