
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relevance-medic"
version = "0.1.0"
description = "AI-assisted diagnosis for ecommerce search incidents"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
